增加功能readme